--- a/local/pressure-washing-warmsworth.html
+++ b/local/pressure-washing-warmsworth.html
@@ -1,1 +1,402 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<meta name="title" content="Driveway & Patio Pressure Washing in Warmsworth – Instant Online Quote">
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-warmsworth.html">
+<meta name="description" content="Transform your home with professional pressure washing in Warmsworth. Get a free, instant online quote today for driveways, patios, walls, decking, and fencing!">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+.main-nav {
+background: #000;
+border-bottom: 3px solid #27ae60;
+font-family: sans-serif;
+}
+
+.main-nav ul {
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+.menu {
+display: flex;
+justify-content: center;
+}
+
+.menu > li {
+position: relative;
+}
+
+.menu a {
+display: block;
+padding: 14px 22px;
+color: #fff;
+text-decoration: none;
+font-weight: 600;
+}
+
+.menu a:hover {
+background: #333;
+}
+
+/* DROPDOWN */
+.submenu {
+display: none;
+position: absolute;
+top: 100%;
+left: 0;
+background: #000;
+min-width: 200px;
+z-index: 1000;
+}
+
+.has-submenu:hover .submenu {
+display: block;
+}
+
+.submenu a {
+padding: 12px 18px;
+color: #fff;
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+.menu {
+flex-direction: column;
+}
+
+.submenu {
+position: static;
+display: none; /* hidden by default */
+}
+
+.submenu-toggle::after {
+content: " ▼";
+}
+}
+
+/* MOBILE CLICK TOGGLE */
+@media (max-width: 768px) {
+.submenu-toggle {
+cursor: pointer;
+}
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+</header>
+<nav class="main-nav" aria-label="Main navigation">
+<ul class="menu">
+<li class="has-submenu">
+<a href="#" class="submenu-toggle">Services</a>
+<ul class="submenu">
+<li><a href="/local/pressure-washing-doncaster.html">Pressure Washing</a></li>
+<li><a href="/guttering-services/doncaster.html">Guttering Services</a></li>
+<li><a href="/contact.html">Contact</a></li>
+</ul>
+</li>
+</ul>
+</nav>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1>Driveway Pressure Washing</h1>
+<h2>Revive Your Warmsworth Driveway Today</h2>
+<p><strong>Your driveway</strong> is the first thing visitors notice, and over time dirt, moss, oil stains, and grime can make it look worn and uninviting. Our professional <strong>pressure washing</strong> service in <strong>Warmsworth Doncaster</strong> is designed to restore your driveway to its original appearance. Using high-quality equipment and eco-friendly cleaning solutions, we remove stubborn dirt and stains efficiently, leaving a clean, smooth surface. Whether you have block paving, concrete, or tarmac, our team knows the right pressure and technique to achieve outstanding results without damaging your driveway. We focus on every detail, ensuring corners and edges are thoroughly cleaned. Our local expertise means we understand the common issues <strong>Warmsworth driveways</strong> face, from moss during damp months to ingrained tyre marks. Clients appreciate our punctual, reliable service, and we guarantee satisfaction on every job. By investing in professional <strong>driveway pressure washing</strong>, you not only improve your home’s curb appeal but also protect the longevity of your driveway surface.</p>
+<p>Pressure washing your driveway in <strong>Warmsworth Doncaster</strong> is a cost-effective way to enhance your property’s exterior. Over time, accumulated dirt and moss can become slippery and hazardous, posing a risk to family and visitors. Our service removes all contaminants, restoring safety and aesthetic appeal simultaneously. With our trained technicians, we ensure the right water pressure and cleaning techniques for your driveway type, avoiding damage while delivering exceptional results. Local <strong>Warmsworth</strong> residents trust us for fast, efficient, and reliable service. Choosing professional <strong>driveway pressure washing</strong> improves both safety and the overall value of your property. Your driveway will look freshly installed, boosting the appeal of your home instantly.</p>
+<p>For residents in <strong>Warmsworth</strong>, professional <strong>pressure washing</strong> offers a quick transformation. Restore your driveway’s appearance, enhance safety, and impress visitors with a pristine, clean surface that highlights the beauty of your property.</p>
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Warmsworth">
+professional driveway pressure washing services in Warmsworth Doncaster FAQS</a></p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Driveway in Warmsworth after professional pressure washing, showing a clean, stain-free surface with restored block paving."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Patio Pressure Washing</h2>
+<h3>Make Your Warmsworth Patio Sparkle</h3>
+<p>Your patio is an outdoor extension of your home, perfect for relaxing, entertaining, and enjoying fresh air. Over time, dirt, moss, algae, and weathering can make your patio look dull and slippery. Our <strong>patio pressure washing</strong> service in <strong>Warmsworth Doncaster</strong> removes all grime, restoring its original colour and texture. Whether you have paving stones, concrete slabs, or decorative tiles, we carefully adjust the pressure and cleaning solutions to suit your surface type, preventing damage while delivering thorough cleaning. Local homeowners rely on our professional expertise for consistent results, ensuring every corner, gap, and edge is treated. A clean patio not only improves aesthetics but also extends its lifespan by preventing moss growth and material degradation.</p>
+<p>Pressure washing your <strong>Warmsworth patio</strong> revitalises outdoor spaces instantly. Dirt, algae, and moss can accumulate quickly, creating slippery surfaces and reducing appeal. Our skilled team targets these problem areas, cleaning effectively without harming your patio materials. With regular maintenance, your patio remains safe, attractive, and ready for gatherings. Trust local experts for efficient, thorough service that brings your patio back to life. Professional <strong>patio pressure washing</strong> enhances your home’s exterior while protecting the investment you’ve made in your outdoor spaces.</p>
+<p>Enjoy a clean, safe patio in <strong>Warmsworth</strong> with our expert <strong>pressure washing</strong> service. Restore beauty, remove algae and moss, and create a welcoming outdoor area perfect for family time, barbecues, and entertaining friends all year round.</p>
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
+title="Patio and paving  pressure cleaning in Warmsworth">
+professional patio pressure washing services Warmsworth Doncaster FAQS</a></p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Patio in Warmsworth after professional pressure washing, showing bright, clean paving stones free from moss and dirt."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>House & Garden Wall Pressure Washing</h2>
+<h3>Protect and Beautify Your Warmsworth Walls</h3>
+<p>Walls surrounding your home and garden are constantly exposed to weather, dirt, and pollutants, which can cause staining and erosion over time. Our <strong>house and garden wall pressure washing</strong> service in <strong>Warmsworth Doncaster</strong> is designed to gently but effectively remove dirt, algae, and grime while preserving the integrity of your walls. From brick and stone to rendered surfaces, we assess the material and adjust the pressure accordingly to prevent damage. Our local team understands the specific environmental factors in <strong>Warmsworth</strong>, including rain, frost, and moss growth, which often affect wall surfaces. By choosing our professional service, you protect your property’s appearance and value while enhancing the overall look of your garden or boundary walls. Residents trust our reliable, efficient service for results that last and walls that look freshly restored.</p>
+<p>Pressure washing your <strong>Warmsworth walls</strong> removes accumulated grime and prevents long-term damage caused by algae, moss, and dirt buildup. Our experts carefully clean each surface, paying attention to material type and condition to ensure effective results without causing harm. A well-maintained wall improves the overall aesthetic of your property and complements freshly cleaned driveways, patios, and fences. Local <strong>Warmsworth</strong> homeowners rely on our professional <strong>wall pressure washing</strong> services for consistency, safety, and quality. Investing in regular maintenance helps preserve your walls, preventing costly repairs while maintaining a pristine exterior appearance throughout the year.</p>
+<p>Transform your <strong>Warmsworth</strong> property with expert <strong>pressure washing</strong> for house and garden walls. Remove dirt and moss, improve curb appeal, and protect your walls from damage, giving your home a clean, fresh, and inviting exterior.</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="House and garden walls in Warmsworth after professional pressure washing, showing clean brick and stone surfaces free from algae and stains."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<p>Decking and fences can quickly lose their charm due to weather, dirt, moss, and algae. Our <strong>decking and fence pressure washing</strong> service in <strong>Warmsworth Doncaster</strong> restores wood and composite materials to their original beauty. Using precise techniques and the correct pressure, we remove buildup without causing damage. <strong>Warmsworth homeowners</strong> rely on our expertise to maintain the integrity and appearance of outdoor spaces, extending the life of their decking and fencing. Whether preparing for summer gatherings or maintaining year-round appeal, our service ensures surfaces are safe, clean, and visually appealing. Regular maintenance prevents rot and decay, preserving the investment you’ve made in your garden.</p>
+<p>Professional <strong>pressure washing</strong> for decking and fencing in <strong>Warmsworth</strong> removes dirt, algae, and moss while protecting the material. Our trained team carefully treats each surface, preventing damage while restoring natural colours and textures. Clean decking and fences improve safety, longevity, and visual appeal. Local residents trust our reliable, efficient service to maintain their outdoor spaces. By choosing expert <strong>pressure washing</strong>, you keep your decking and fencing looking fresh and well-cared-for, creating a welcoming garden environment that complements your home beautifully.</p>
+<p>Rejuvenate your <strong>Warmsworth</strong> decking and fencing with professional <strong>pressure washing</strong>. Remove years of dirt and moss, enhance safety, and preserve the lifespan of your outdoor wood or composite materials. Enjoy clean, vibrant outdoor areas perfect for entertaining, relaxing, and adding value to your property instantly.</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Decking and fencing in Warmsworth after pressure washing, showing clean, moss-free wood and composite surfaces."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Get Your Warmsworth Property Spotless Today</h2>
+<h3>Contact Local Experts for Fast, Reliable Service</h3>
+<p>For homeowners in <strong>Warmsworth Doncaster</strong>, professional <strong>pressure washing</strong> is the easiest way to enhance property appearance, safety, and value. From driveways and patios to walls, decking, and fencing, our local team provides reliable, efficient service tailored to your specific surfaces. We understand the unique conditions <strong>Warmsworth</strong> properties face and use expert techniques to remove dirt, moss, algae, and stains without causing damage. Whether you need a one-time deep clean or ongoing maintenance, we deliver consistent, high-quality results. Transform your home and garden effortlessly, impress visitors, and protect your property investment. Request your instant online quote today and experience the difference that professional <strong>pressure washing</strong> can make.</p>
+<p>
+We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
+To get a quote specifically for gutter cleaning or maintenance in Doncaster, visit our
+<a href="https://homerepairs4u.com/guttering-services/doncaster.html" title="Professional Gutter Cleaning Services in Doncaster">Gutter Cleaning Service page</a>.
+</p>
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+<img src="/images/pressure-washing-algae.webp"
+alt="Professional pressure washing team working in Warmsworth, showing clean driveway, patio, walls, decking, and fencing."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-warmsworth.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.4987,
+"longitude": -1.1829
+},
+"areaServed": "Warmsworth",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+const toggles = document.querySelectorAll('.submenu-toggle');
+toggles.forEach(function(toggle) {
+toggle.addEventListener('click', function(e) {
+e.preventDefault();
+const submenu = this.nextElementSibling;
+if(submenu.style.display === 'block') {
+submenu.style.display = 'none';
+} else {
+submenu.style.display = 'block';
+}
+});
+});
+});
+</script>
+</body>
+</html>
