--- a/local/pressure-washing-warmsworth.html
+++ b/local/pressure-washing-warmsworth.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<meta name="title" content="Driveway & Patio Pressure Washing in Warmsworth – Instant Online Quote">
+<title>Driveway & Patio Pressure Washing in Warmsworth – Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-warmsworth.html">
 <meta name="description" content="Transform your home with professional pressure washing in Warmsworth. Get a free, instant online quote today for driveways, patios, walls, decking, and fencing!">
