--- a/guttering-services/doncaster.html
+++ b/guttering-services/doncaster.html
@@ -226,11 +226,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p></p>
 <p></p>
 
-<p>
-<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
-title="Driveway pressure washing in ??????????  village  ???????????????">
-professional driveway pressure washing services in ?????????????????   village ????????????????? FAQS</a></p>
-<img src="/images/pressure-washing-driveway.webp"
+<img src="/images/gutter-clearing.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
@@ -246,11 +242,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p></p>
 <p></p>
 
-<p>
-<a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
-title="Patio and paving  pressure cleaning in ???????????????      ????????????????">
-professional patio pressure washing services ??????????????      ???????????? FAQS</a></p>
-<img src="/images/pressure-washing-patios.webp"
+<img src="/images/cleaned-gutters-before-after.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
@@ -265,7 +257,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p></p>
 <p></p>
 <p></p>
-<img src="/images/pressure-washing-walls.webp"
+<img src="/images/gutter-dirty.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
@@ -280,7 +272,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p></p>
 <p></p>
 <p></p>
-<img src="/images/pressure-wash-decking.webp"
+<img src="/images/gutter-alignment.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
@@ -293,14 +285,14 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2></h2>
 <p>
 We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
-To get a quote specifically for gutter cleaning or maintenance in Doncaster, visit our
-<a href="https://homerepairs4u.com/guttering-services/doncaster.html" title="Professional Gutter Cleaning Services in Doncaster">Gutter Cleaning Service page</a>.
+To get a quote specifically for pressure washing in Doncaster, visit our
+<a href="https://homerepairs4u.com/local/pressure-washing-doncaster.html" title="Professional Pressure Washing Services in Doncaster">Pressure Washing Service page</a>.
 </p>
 <div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
 <button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
-<img id="lightboxImg" src="" alt="">
+<img id="lightboxImg" src="" alt="Patio halfway through breing pressure washed in Doncaster">
 </div>
-<img src="/images/pressure-washing-algae.webp"
+<img src="/images/pressure-washing-patios.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
@@ -328,7 +320,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/pressure-washing-??????????????????????????????.html",
+"url": "https://homerepairs4u.com/guttering-services/doncaster.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -341,10 +333,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.5352,???????????????????????
-"longitude": -1.0522?????????????????????
+"latitude": 53.5227,
+"longitude": -1.1324
 },
-"areaServed": "????????????????????????????????????",
+"areaServed": "Doncaster",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
