--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="index, follow">
 <title>Contact Us | Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/test.html">
+<link rel="canonical" href="https://homerepairs4u.com/contact.html">
 <meta name="description" content="">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
