--- a/contact.html
+++ b/contact.html
@@ -285,22 +285,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 kept -->
 <section style="margin-bottom:40px; text-align:center;">
-<h1></h1>
-<h2></h2>
-<p></p>
-<p></p>
-<p></p>
-
-<p>
-<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
-title="Driveway pressure washing in ??????????  village  ???????????????">
-professional driveway pressure washing services in ?????????????????   village ????????????????? FAQS</a></p>
-<img src="/images/pressure-washing-driveway.webp"
-alt=""
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+<h1>Contact Us Today</h1>
+<p>Have a question about our exterior cleaning services or want to schedule a professional pressure washing, patio cleaning, or gutter maintenance? We’re here to help!</p>
+<p>Home Repairs 4U proudly serves Askern, Doncaster, and surrounding areas, providing reliable and affordable services to keep your home looking its best. Whether you need a free quote or expert advice, our friendly team is ready to assist you.</p>
+<p>Fill out the form below or call us directly at 07735 873694. We’ll respond promptly and make sure your home gets the care it deserves.</p>
 </section>
 
 <!-- ✅ CONTACT SECTION ADDED -->
@@ -339,6 +327,13 @@ DN6
 <div class="success" id="successMessage">
 ✅ Thanks! Your message has been sent.
 </div>
+</section>
+<img src="/images/pressure-washing-driveway.webp"
+alt=""
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
 
 <!-- ✅ BOTTOM CALL BUTTON -->
