--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title>Contact Us | Home Repairs 4U</title>
+<title>Contact Home Repairs 4U | Askern, Doncaster DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/contact.html">
-<meta name="description" content="">
+<meta name="description" content="Get in touch with Home Repairs 4U in Askern, Doncaster (DN6) for professional pressure washing, patio cleaning, gutter maintenance, and more. Call 07735 873694 or send us a message today.">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 /* --- EXISTING STYLES KEPT --- */
@@ -329,7 +329,7 @@ DN6
 </div>
 </section>
 <img src="/images/pressure-washing-driveway.webp"
-alt=""
+alt="Call today, fast callout for gutter maintenance and pressure washing services Doncaster "
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
