--- a/contact.html
+++ b/contact.html
@@ -208,16 +208,17 @@ resize: vertical;
 .contact-container button {
 width: 100%;
 padding: 12px;
-background: #007bff;
-border: none;
-border-radius: 4px;
+background: #000;
+border: 2px solid #000;
+border-radius: 6px;
 color: #fff;
 font-size: 16px;
 cursor: pointer;
+font-weight: bold;
 }
 
 .contact-container button:hover {
-background: #0056b3;
+background: #333;
 }
 
 .contact-details {
