--- a/contact.html
+++ b/contact.html
@@ -228,12 +228,13 @@ color: #444;
 }
 
 .contact-details a {
-color: #007bff;
+color: #000;
 text-decoration: none;
 font-weight: bold;
 }
 
 .contact-details a:hover {
+color: #333
 text-decoration: underline;
 }
 
