--- a/contact.html
+++ b/contact.html
@@ -227,14 +227,16 @@ text-align: center;
 color: #444;
 }
 
-.contact-details a {
-color: #000;
+.contact-details a 
+.contact-details a:visited {
+color: #000; !important;
 text-decoration: none;
 font-weight: bold;
 }
 
-.contact-details a:hover {
-color: #333
+.contact-details a:hover
+.contact-details a:focus {
+color: #333 !important;
 text-decoration: underline;
 }
 
