--- a/contact.html
+++ b/contact.html
@@ -309,8 +309,7 @@ Askern, Doncaster<br>
 DN6
 </p>
 <p>
-<strong>Tel:</strong>
-<a href="tel:07735873694">07735 873694</a>
+<strong>Tel:</strong>07735 873694
 </p>
 </div>
 
